Bug 1180509 - Fix judder of icons in Australis doorhanger menu at the end of its scale-in animation. r=roc, a=ritu